# llvm_mac_config_gui

./: CMakeLists.txt  LLVMBuilderGUI.pro  Makefile  README.md  builderconfiguration.cpp  builderconfiguration.h  buildersalone.sh  buildexecutor.cpp  buildexecutor.h  commandgenerator.cpp  commandgenerator.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  fielddefaultsmanager.cpp  fielddefaultsmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_CMakeLists.txt  test_main.cpp
LLVMBuilderGUI.app/Contents/: Info.plist
LLVMBuilderGUI.app/Contents/MacOS/: LLVMBuilderGUI
